cargo-features = [ "edition2021" ]

[package]
name = "howler"
version = "0.1.0"
authors = ["Shekhinah Memmel <she@khinah.xyz>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
base64 = "0.13.0"
clap = "2.33.3"
config = "0.11.0"
futures = "0.3.17"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", features = [ "encryption", "sled_cryptostore", "native-tls" ] }
matrix-sdk-common = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
matrix-sdk-base = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
rand = "0.8.4"
serde = "1.0.130"
serde_json = "1.0.67"
sled = "0.34.6"
tera = "1.12.1"
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = [ "time", "macros", "rt-multi-thread", "sync" ] }
tokio-stream = "0.1.7"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
url = { version = "2.2.2", features = [ "serde" ] }
backoff = "0.3.0"
tokio-util = { version = "0.6.8", features = [ "time" ] }
tar = "0.4.37"
once_cell = "1.8.0"
mime = "0.3.16"
slug = "0.1.4"
humantime = "2.1.0"
axum = "0.2.3"
chrono = { version = "0.4.19", features = [ "serde" ] }
prometheus = "0.12.0"
serde_with = "1.10.0"

[profile.dev.package."*"]
opt-level = 2
