[package]
name = "howler"
version = "0.1.0"
authors = ["Shekhinah Memmel <she@khinah.xyz>"]
edition = "2021"
license = "AGPL-3.0"

[features]
console = [ "console-subscriber" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
base64 = "0.13.0"
clap = { version = "3.1.3", features = [ "cargo" ] }
config = "0.12.0"
futures = "0.3.21"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "70490277eb6e56d3d1c637b1967f3a01ed67e9d8", default-features = false, features = [ "encryption", "native-tls" ] }
rand = "0.8.5"
serde = "1.0.136"
serde_json = "1.0.79"
tera = "1.15.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = [ "full", "tracing" ] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = [ "env-filter" ] }
backoff = "0.4.0"
tokio-util = { version = "0.7.0", features = [ "time" ] }
once_cell = "1.9.0"
axum = "0.5.5"
chrono = { version = "0.4.19", features = [ "serde" ] }
prometheus = "0.13.0"
serde_with = "1.12.0"
indexmap = "1.8.0"
hashbrown = "0.12.0"
url = { version = "2.2.2", features = [ "serde" ] }
console-subscriber = { version = "0.1.3", features = [ "parking_lot" ], optional = true }
ruma-identifiers-validation = "0.7.0"
bytes = "1.1.0"
