[package]
name = "howler"
version = "0.1.0"
authors = ["Shekhinah Memmel <she@khinah.xyz>"]
edition = "2021"
license = "AGPL-3.0"

[features]
console = [ "console-subscriber" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
clap = { version = "3.1.18", features = [ "cargo" ] }
config = "0.13.1"
futures = "0.3.21"
matrix-sdk = { version = "0.5.0", features = [ "anyhow", "e2e-encryption", "native-tls" ], default-features = false }
rand = "0.8.5"
serde = "1.0.137"
serde_json = "1.0.81"
tera = "1.15.0"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = [ "full", "tracing" ] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }
backoff = "0.4.0"
tokio-util = { version = "0.7.2", features = [ "time" ] }
once_cell = "1.11.0"
axum = "0.5.6"
chrono = { version = "0.4.19", features = [ "serde" ] }
prometheus = "0.13.1"
serde_with = "1.13.0"
indexmap = "1.8.1"
hashbrown = "0.12.1"
url = { version = "2.2.2", features = [ "serde" ] }
console-subscriber = { version = "0.1.5", features = [ "parking_lot" ], optional = true }
ruma-identifiers-validation = "0.8.1"
bytes = "1.1.0"
http = "0.2.7"
